removed placeholder, fixed alignment issues

--- a/newsletter-sign-up-with-success-message/src/css/index.css
+++ b/newsletter-sign-up-with-success-message/src/css/index.css
@@ -94,6 +94,8 @@ body {
   font-family: "Roboto", sans-serif;
   min-height: 100vh;
   color: var(--blue-800);
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
